# bash_to_python

./: .gitignore  MANIFEST.in  README.md  __init__.py  plotting.py  pyaws.py  pyproject.toml  req.txt  requirements.txt  typescript
Corsair/: .gitignore  start_here.py
Corsair/datasets/: sample_dataset.py
Corsair/experiments/: evaulation.py
_examples/plotting/: x11forwarding.py
_examples/transfer/: cp_recursive_ex.py  fast_upload_ex.py  scp_with_pbar.py  sync_ex.py
_test/pytorch_utils/: dataset_test.py
_test/scp/: minscp.sh  progbar.py  scp_test.py
corsair/: README.md  flir_dataset_test.py  start_here.py
corsair/datasets/: flir_dataset.py
corsair/experiments/: bases.py  evaulation.py  network_templates.py
examples/transfer/: cp_recursive_ex.py  transfer.py
lazypytorch/experiments/: bases.py  network_templates.py  util.py
plotting/: plotting.py
plotting/scripts/: trigger2.sh
pytorch_utils/: __init__.py  treeimagefolder.py
scripts/: awscp.sh  awssync.sh  copy_dir.sh  sync_dir.sh
scripts/DEPRECIATED/: sync_dir_to_s3.sh  sync_wrapper.sh
src/btp.egg-info/: PKG-INFO  SOURCES.txt
src/shwrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sshtools.egg-info/: PKG-INFO  SOURCES.txt
test/: copy_files_to_s3.py  mpl_fowarding.py  regex_output.py  scp.py  temp.sh  upload_speeds.py  upload_speeds.sh
test/plotting/: start_trigger.py  trigger.py
test/scp/: cp_rec.py  minscp.py  scp.py  scp2.py  temp.sh
tests/scp/: scp_test.py  scp_test.sh
tests/sync_and_cp_recurs/: upload_speeds.py
transfer/: __init__.py  transfer.py
(+38 files in other folders)
